gatekeeper/cluster/constraints/gatekeeper-k8srequiredlabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: namespace-owner-label-present
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: >-
      All namespaces must have a `uw.systems/owner` label that corresponds to
      the name of the team. A list of valid team names can be found here:
      https://github.com/utilitywarehouse/documentation/tree/master/infra#structure
    labels:
      - key: "uw.systems/owner"
        allowedRegex: "^(bill|billing|btg-operations|btg-security|cbc|contact-channels|crm|customer|customer-platform|data|dev-enablement|digital-support|energy|insurance|partner|payment|system|telecom|unicom)$"
